[gd_scene load_steps=6 format=3 uid="uid://dwlgs2utytkmp"]

[ext_resource type="Script" path="res://scripts/wings.gd" id="1_t7iew"]

[sub_resource type="BoxMesh" id="BoxMesh_27qpu"]
size = Vector3(0.235, 0.05, 0.055)

[sub_resource type="BoxMesh" id="BoxMesh_rxuex"]
size = Vector3(0.055, 0.615, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_r8dfn"]
size = Vector3(0.055, 0.34, 0.05)

[sub_resource type="BoxMesh" id="BoxMesh_5riuh"]
size = Vector3(0.055, 0.475, 0.05)

[node name="wings" type="Node3D"]
transform = Transform3D(0.999802, 0, 0, 0, 0.999085, 0.0374865, 0, -0.0374833, 0.99917, 0.000423058, 0.853603, -3.69849e-11)
script = ExtResource("1_t7iew")

[node name="base" type="Node3D" parent="."]

[node name="arm1R" type="Node3D" parent="base"]
transform = Transform3D(0.998756, 0.00211266, -0.0498001, -0.00211529, 0.999997, 0, 0.0497999, 0.000105342, 0.998759, 0.0553492, 0.15351, 0.092873)

[node name="MeshInstance3D" type="MeshInstance3D" parent="base/arm1R"]
transform = Transform3D(0.548691, 0.836025, 0.000603292, -0.785837, 0.515507, 0.341636, 0.285305, -0.187927, 0.939832, 0.0809303, -0.0578349, 0.0226123)
mesh = SubResource("BoxMesh_27qpu")
skeleton = NodePath("../..")

[node name="arm2R" type="Node3D" parent="base/arm1R"]
transform = Transform3D(0.999681, 0.0249075, 0.00423057, -0.0249078, 0.99969, 0, -0.00422926, -0.000105374, 0.999991, 0.141385, -0.154298, 0.0592059)

[node name="arm3R" type="Node3D" parent="base/arm1R/arm2R"]
transform = Transform3D(0.99914, 0.0161061, 0.0382107, -0.0161178, 0.99987, 0, -0.0382058, -0.000615874, 0.99927, 0.0902649, 0.457132, 0.0246898)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R/arm2R/arm3R"]
transform = Transform3D(0.948493, -0.307076, 0.0778817, 0.278066, 0.924769, 0.259773, -0.151793, -0.224737, 0.962524, 0.136625, -0.270368, 0.0966148)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="arm4R" type="Node3D" parent="base/arm1R/arm2R/arm3R"]
transform = Transform3D(0.998756, -0.00211266, 0.0498001, 0.00211529, 0.999997, 0, -0.0497999, 0.000105342, 0.998758, 0.197679, -0.542483, 0.152754)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R/arm2R/arm3R/arm4R"]
transform = Transform3D(0.874136, 0.479282, -0.0785761, -0.478815, 0.877533, 0.0259173, 0.081375, 0.014968, 0.996572, -0.0460232, -0.130776, 0.00385767)
mesh = SubResource("BoxMesh_r8dfn")
skeleton = NodePath("../../..")

[node name="arm3R2" type="Node3D" parent="base/arm1R/arm2R"]
transform = Transform3D(0.99969, 0.00966843, 0.02293, -0.00967097, 0.999953, 0, -0.0229289, -0.000221755, 0.999737, 0.0694676, 0.477181, 0.0133825)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R/arm2R/arm3R2"]
transform = Transform3D(0.993357, -0.107335, 0.0415005, 0.0956217, 0.970512, 0.221276, -0.064027, -0.215838, 0.974328, 0.0884918, -0.314872, 0.112407)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="arm3R3" type="Node3D" parent="base/arm1R/arm2R"]
transform = Transform3D(0.999922, 0.00483522, 0.0114658, -0.00483554, 0.999988, 0, -0.0114656, -5.54431e-05, 0.999935, 0.0743631, 0.468703, 0.0069726)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R/arm2R/arm3R3"]
transform = Transform3D(0.975491, 0.156511, -0.154663, -0.136237, 0.98157, 0.134021, 0.172788, -0.109665, 0.978835, 0.0189947, -0.314534, 0.0686916)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="base/arm1R/arm2R"]
transform = Transform3D(0.942921, 0.332783, -0.0124852, -0.332174, 0.937209, -0.106299, -0.0236731, 0.104378, 0.994256, 0.0632368, 0.234351, 0.0237213)
mesh = SubResource("BoxMesh_5riuh")

[node name="arm1R2" type="Node3D" parent="base"]
transform = Transform3D(0.998757, -0.00211266, 0.0498001, 0.00211529, 0.999998, 0, -0.0498, 0.000105342, 0.998759, -0.055, 0.154, 0.093)

[node name="MeshInstance3D" type="MeshInstance3D" parent="base/arm1R2"]
transform = Transform3D(0.549023, -0.835808, 0, 0.785402, 0.515913, 0.34202, -0.285863, -0.187777, 0.939692, -0.081, -0.058, 0.023)
mesh = SubResource("BoxMesh_27qpu")
skeleton = NodePath("../..")

[node name="arm2R" type="Node3D" parent="base/arm1R2"]
transform = Transform3D(0.99968, -0.0249075, -0.00423057, 0.0249078, 0.999689, 0, 0.00422926, -0.000105374, 0.99999, -0.137, -0.162, 0.056)

[node name="arm3R" type="Node3D" parent="base/arm1R2/arm2R"]
transform = Transform3D(0.99914, -0.0161061, -0.0382107, 0.0161178, 0.99987, 0, 0.0382058, -0.000615874, 0.99927, -0.09, 0.457, 0.025)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R2/arm2R/arm3R"]
transform = Transform3D(0.960741, 0.266424, 0.0774299, -0.277439, 0.924751, 0.260505, -0.00219875, -0.271759, 0.962363, -0.137, -0.27, 0.097)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="arm4R" type="Node3D" parent="base/arm1R2/arm2R/arm3R"]
transform = Transform3D(0.998756, 0.00211266, -0.0498001, -0.00211529, 0.999997, 0, 0.0497999, 0.000105342, 0.998758, -0.198, -0.542, 0.153)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R2/arm2R/arm3R/arm4R"]
transform = Transform3D(0.876259, -0.475413, -0.0784323, 0.478528, 0.877682, 0.026177, 0.0563937, -0.0604698, 0.996577, 0.046, -0.131, 0.004)
mesh = SubResource("BoxMesh_r8dfn")
skeleton = NodePath("../../..")

[node name="arm3R2" type="Node3D" parent="base/arm1R2/arm2R"]
transform = Transform3D(0.99969, -0.00966843, -0.02293, 0.00967097, 0.999953, 0, 0.0229289, -0.000221755, 0.999737, -0.069, 0.477, 0.013)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R2/arm2R/arm3R2"]
transform = Transform3D(0.99526, 0.0882641, 0.040835, -0.0951579, 0.970495, 0.221549, -0.0200754, -0.224384, 0.974294, -0.088, -0.315, 0.112)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="arm3R3" type="Node3D" parent="base/arm1R2/arm2R"]
transform = Transform3D(0.999922, -0.00483522, -0.0114658, 0.00483554, 0.999988, 0, 0.0114656, -5.54431e-05, 0.999935, -0.074, 0.469, 0.007)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="base/arm1R2/arm2R/arm3R3"]
transform = Transform3D(0.981195, -0.114991, -0.155024, 0.136205, 0.981579, 0.133986, 0.136761, -0.152582, 0.978783, -0.019, -0.315, 0.069)
mesh = SubResource("BoxMesh_rxuex")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="base/arm1R2/arm2R"]
transform = Transform3D(0.942138, -0.335006, -0.0121478, 0.331917, 0.937304, -0.106264, 0.0469853, 0.0960833, 0.994264, -0.063, 0.234, 0.024)
mesh = SubResource("BoxMesh_5riuh")
